--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
       "run_at": "document_end"
     }
   ],
-
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
    "background": {
       "persistent": false,
       "scripts": [ "background.js", "jquery.js" ]
@@ -26,7 +26,8 @@
    "permissions": [ "tabs", "cookies", "activeTab", "storage", "management","*://*.twitter.com/*"],
 
       "browser_action": {
-        "default_title": "js inject"
+        "default_title": "SNAT",
+        "default_popup":"popup.html"
     }
 	
 }
