--- a/manifest.json
+++ b/manifest.json
@@ -12,15 +12,22 @@
     {
       // "all_frames": true,
       // "match_about_blank": true,
-      "js": [ "jquery.js" ,"twitter.js"],
+      "js": [ "jquery.js" ,"twitter.js","lib.js"],
       "matches": ["*://*.twitter.com/*"],
       "run_at": "document_start"
     },
     {
       // "all_frames": true,
       // "match_about_blank": true,
-      "js": [ "jquery.js" ,"tut.js"],
+      "js": [ "jquery.js" ,"tut.js","lib.js"],
       "matches": ["*://*.talks.by/*"],
+      "run_at": "document_start"
+    },
+    {
+      // "all_frames": true,
+      // "match_about_blank": true,
+      "js": [ "jquery.js" ,"onliner.js","lib.js"],
+      "matches": ["*://*.forum.onliner.by/*"],
       "run_at": "document_start"
     }
   ],
@@ -30,7 +37,7 @@
       "scripts": [ "background.js", "jquery.js" ]
    },
 
-   "permissions": [ "tabs", "cookies", "activeTab", "storage", "management","*://*.twitter.com/*","*://*.talks.by/*"],
+   "permissions": [ "tabs", "cookies", "activeTab", "storage", "management","*://*.twitter.com/*","*://*.talks.by/*","*://*.forum.onliner.by/*","*://*.localhost/*"],
 
       "browser_action": {
         "default_title": "SNAT",
