--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   [ 
     {
       "js": ["libs/jquery.js", "libs/spin.js","libs/popover.min.js", "sites/reddit.js",  "request.js"],
-      "css": ["libs/spin.css", "libs/popover.min.css"],
+      "css": ["libs/spin.css", "libs/popover.min.css", "sites/reddit.css"],
       "matches": ["*://*.reddit.com/*"],
       "run_at": "document_start"
     }
