--- a/manifest.json
+++ b/manifest.json
@@ -10,13 +10,13 @@
   [ 
     {
       "js": ["libs/jquery.js", "libs/spin.js","libs/popover.min.js", "sites/reddit.js",  "request.js"],
-      "css": ["libs/spin.css", "libs/popover.min.css", "sites/reddit.css"],
+      "css": ["libs/spin.css", "libs/popover.min.css", "sites/toxic.css"],
       "matches": ["*://*.reddit.com/*"],
       "run_at": "document_start"
     },
     {
       "js": ["libs/jquery.js", "libs/spin.js","libs/popover.min.js", "sites/pikabu.js",  "request.js"],
-      "css": ["libs/spin.css", "libs/popover.min.css", "sites/pikabu.css"],
+      "css": ["libs/spin.css", "libs/popover.min.css", "sites/toxic.css"],
       "matches": ["*://*.pikabu.ru/*"],
       "run_at": "document_start"
     }
